2005-05-25  Alex Roitman  <shura@gramps-project.org>
	* src/EditPlace.py: WATCH cursor and temp label for References tab.
	* src/EditSource.py: Improve manipulating notebook tab labels.
	* src/Utils.py (temp_label): Add function;
	(bold_label,unbold_label): Properly set cursor to default.
	* src/gramps.glade (event editor, source editor, place editor):
	Add icons to notebook tabs. 

2005-05-25  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/plugins/ScratchPad.py: disabled search because it does not do 
	  what the user expects.
	
2005-05-25  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/plugins/ScratchPad.py: rename on_scratch_pad_delete_event for consistency
        * src/plugins/scratchpad.glade: add on_scratch_pad_delete_event to fix bug 
	  when window is close using the window manager close button.
	
2005-05-25  Alex Roitman  <shura@gramps-project.org>
	* src/EditSource.py (__init__): set cursor to WATCH before displaying
	references; call display_references when idle;
	(display_references): set cursor to LEFT_PTR when done.
	* src/ListModel.py (__init__): Typo.
	* src/Utils.py (bold_label,unbold_label): make work with both
	labels and their parent containers.

2005-05-24  Don Allingham  <don@gramps-project.org>
	* various: CVS conflict resolution

2005-05-24  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/PHPGedViewConnector.py: Enhanced version.
	
2005-05-23  Alex Roitman  <shura@gramps-project.org>
	* various: merge changes made in gramps20 branch with main trunk.

2005-05-23  Don Allingham  <don@gramps-project.org>
	* src/MergePeople.py: clean up and refactoring of code.
	* Release: Version 2.0.1 "None shall pass" released.

2005-05-23  Alex Roitman  <shura@gramps-project.org>
	* src/po/ru.po: More tranlsated tips.

2005-05-23  Eero Tamminen  <eerot@sf>
	* src/po/fi.po: Translate all fuzzy strings.  Tips are still to be
	  translated
	* src/plugins/StatisticsChart.py: Fix a typo in one string