@@ -1,3 +1,7 @@
+2005-05-26  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
+	* src/plugins/TestcaseGenerator.py: Add place, media and source
+	references.
+
 2005-05-25  Alex Roitman  <shura@gramps-project.org>
 	* src/EditPlace.py: WATCH cursor and temp label for References tab.
 	* src/EditSource.py: Improve manipulating notebook tab labels.
